@@ -1,92 +1,84 @@
 *** Begin README
 
-# Socializer-frontend
+# Socializer — JavaFX Frontend
 
-Simple JavaFX desktop client for the Socializer API. The app provides authentication (JWT), a posts feed with images and likes, post creation/editing with image uploads, and basic user/profile interactions.
+Socializer is a desktop JavaFX client that connects to a JSON REST API (the Socializer backend). The application provides an easy-to-use UI for browsing and interacting with posts (images + captions), creating and editing posts (with image uploads), and interacting with user profiles and comments.
 
-## Key Features
-- **Authentication:** login/register flows and local JWT handling.
-- **Feed:** list posts with images, captions, likes and comments.
-- **Post creation & editing:** upload images and create/update posts.
-- **Ownership controls:** delete and edit are available only for resource owners.
-- **FXML + CSS UI:** layouts in FXML and styling via CSS.
+What's included
+- Authentication: login and registration screens with JWT-based authentication. The app stores the JWT in the `ApiClient` helper and attaches it to authorized requests.
+- Feed & navigation: the main feed (`home-view.fxml`) is a `ListView` of posts; each item navigates to a per-post detail screen (`post-view.fxml`) showing the image, full caption, and comments.
+- Post creation & editing: the post creation UI (`PostCreationController`) lets users select an image from disk, preview it, and create a post. Image uploads are performed as multipart POSTs to the backend via `ApiClient.uploadFile` (see notes below).
+- Comments: add comments from the post detail screen; comments are shown in a `ListView` in `post-view.fxml`.
+- Profile actions: profile and ownership checks are implemented in controllers to show/hide edit and delete actions for posts owned by the current user.
 
-## Tech stack
-- Java 17+ (module system)
-- JavaFX for UI
-- Maven with wrappers (`mvnw`, `mvnw.cmd`)
-
-## Repository layout (important files)
+Project layout (key files and folders)
 - `src/main/java/com/example/demo`
-   - `Launcher.java`, `SocializerApplication.java` — application entry points
-   - `api/` — HTTP client helpers and resource clients: `ApiClient.java`, `AuthClient.java`, `PostClient.java`, `CommentClient.java`, `TagClient.java`, `UserClient.java`
-   - `controllers/` — JavaFX controllers: `HomeController`, `LoginController`, `RegisterController`, `ProfileController`, `UserProfileController`, `PostCreationController`, `PostEditorController`, `PostController`, `EditProfileController`, `AvatarController` and others
-   - `model/` — POJOs: `Post`, `Comment`, `User`, `Tag`, `ApiResponse`, `UserUpdate`
+  - `Launcher.java`, `SocializerApplication.java` — app bootstrap and JavaFX startup
+  - `api/` — API layer
+    - `ApiClient.java` — central HTTP helper, JWT management, and `uploadFile(File)` implementation
+    - `PostClient.java`, `UserClient.java`, `CommentClient.java`, `TagClient.java`, `AuthClient.java` — resource-specific clients
+  - `controllers/` — JavaFX controllers bound to FXML screens
+    - `HomeController` — feed listing and navigation
+    - `LoginController`, `RegisterController` — auth flows
+    - `PostController` — post detail, comments and comment posting
+    - `PostCreationController`, `PostEditorController` — create/edit flows with image selection and upload
+  - `model/` — POJOs used for JSON mapping (`Post`, `Comment`, `User`, `Tag`, `ApiResponse`)
 - `src/main/resources/`
-   - `client.properties` — runtime config (backend URL)
-   - `com/example/demo/fxml/*.fxml` — UI layouts
-   - `com/example/demo/css/style.css` — UI styling
+  - `client.properties` — runtime config (e.g. `backend.baseUrl`)
+  - `com/example/demo/fxml/` — FXML layouts: `home-view.fxml`, `login.fxml`, `post-view.fxml`, `register-view.fxml`, `profile-view.fxml`, etc.
+  - `com/example/demo/css/style.css` — app styling used by FXML
 
-## Getting started
+Build and run (Windows PowerShell)
+1. Build the project:
 
-### Prerequisites
-- JDK 17 or newer and `JAVA_HOME` set.
-- If running outside an IDE that provides JavaFX, install JavaFX SDK and use `--module-path`/`--add-modules` when launching.
-
-### Build (Windows PowerShell)
 ```powershell
 .\mvnw.cmd clean package
 ```
 
-### Run
-- IDE: import as Maven project and run `com.example.demo.SocializerApplication` (or `Launcher`).
-- Maven wrapper (if configured):
+2. Run from IDE: import the Maven project and run `com.example.demo.SocializerApplication`.
+
+3. Run via plugin (if configured in `pom.xml`):
 
 ```powershell
 .\mvnw.cmd javafx:run
 ```
 
-### Configuration
-- Set the backend URL in `src/main/resources/client.properties`:
+Configuration
+- Edit `src/main/resources/client.properties` to set the backend URL. Example:
 
 ```
 backend.baseUrl=http://localhost:7007
 ```
 
-## Recent changes (Dec 2025)
-- Improved file upload handling in `ApiClient.uploadFile`:
-   - Multipart body built with explicit UTF-8 encoding and `Content-Transfer-Encoding: binary`.
-   - Request logs now print upload URI, payload size and server response to help debugging.
-   - Authorization header is no longer sent when there is no JWT (prevents sending `Bearer null`).
-   - Accepts HTTP 200 or 201 as success.
-- Post creation (`PostCreationController`) now runs the upload + create flow on a background thread and disables the create button while running to prevent duplicate clicks.
-- `UserClient.updateUserProfile` reads an `X-New-Auth-Token` response header and updates the local JWT when present.
-- Brief single-line comments were added across controllers and models to improve readability for developers.
+Key implementation details and developer notes
+- Multipart uploads: `ApiClient.uploadFile(File)` constructs multipart requests and logs the upload URI, payload size, and server response to help debugging. If your backend expects a different form-field name (for example `image`), update the form field name accordingly in `ApiClient`.
+- Threading and UI: `PostCreationController.handleCreatePost()` runs image upload + post-create flows on a background thread and disables the create button during the operation to prevent duplicate submissions and UI blocking. UI updates (alerts, scene navigation) are performed via `Platform.runLater(...)`.
+- JWT handling: `ApiClient` stores the JWT and attaches `Authorization: Bearer <token>` when present. Some server responses may provide a refreshed token via a response header (e.g., `X-New-Auth-Token`); `UserClient.updateUserProfile` contains logic to refresh the locally stored token when provided.
+- Error handling and logs: controller-level alerts are used to surface errors to users; the client prints upload status and server response body to stdout/stderr to help diagnose problems such as HTML responses, redirects, or unexpected status codes.
 
-## Notes on upload-related backend loops
-- If your backend appears to enter a redirect/loop when receiving uploads, check the frontend console for the `Uploading file to:` log and response details (status, body). Typical causes:
-   - Server redirects POSTs to a login page (e.g. returns HTML instead of JSON) — look for 3xx or 302 responses or HTML bodies in the logs.
-   - Server expects a different multipart field name (e.g. `image` vs `file`). Adjust the `name="file"` in `ApiClient.uploadFile` if your server expects `image`.
-   - Authentication problems: sending an invalid or missing JWT can cause the server to redirect to auth flows — ensure `client.properties` points to the correct backend and that you are logged in.
+Common troubleshooting steps
+- If uploads cause the backend to redirect or return unexpected HTML, check the console logs for the `Uploading file to:` message and the server response body — this often indicates an authentication/redirect or a routing issue on the server.
+- If authentication is failing, verify `client.properties` points to the correct backend and that the JWT is set after login.
+- If the server rejects multipart fields, change the field name in the `ApiClient` multipart builder (the FXML and controllers only select files and pass them to the client layer).
 
-## Where to look in code
-- Upload and auth: `src/main/java/com/example/demo/api/ApiClient.java`
-   - `uploadFile(File)` builds and sends multipart uploads and logs responses.
-   - `login`, `register`, `logout` manage JWT state; `updateJwtToken` refreshes token from responses.
-- Post creation: `src/main/java/com/example/demo/controllers/PostCreationController.java` (background upload + create)
-- Post editing: `src/main/java/com/example/demo/controllers/PostEditorController.java` (uploads when saving)
+Where to inspect or extend functionality
+- UI screens: `src/main/resources/com/example/demo/fxml/*` and corresponding controllers in `src/main/java/com/example/demo/controllers`.
+- API layer and endpoints: `src/main/java/com/example/demo/api`.
+- Models and JSON mapping: `src/main/java/com/example/demo/model`.
 
-## Debugging tips
-- Start the app and reproduce the upload; watch the console (IDE run console or terminal) for the `Uploading file to:` log and the server response body.
-- If the response contains HTML or a redirect, inspect the backend logs or ensure the backend upload endpoint accepts multipart POSTs at `/api/uploads`.
-- If needed, change the multipart form field name in `ApiClient.uploadFile` to match the backend (`name="image"` or `name="file"`).
+Testing & iterative workflow
+- Use the Maven wrapper to build quickly after changes:
 
-## Contributing
-- Small focused PRs are preferred. Keep UI logic in controllers minimal and delegate HTTP to the API clients in `api/`.
+```powershell
+.\mvnw.cmd -DskipTests=true package
+```
 
-## Troubleshooting
-- JavaFX runtime errors: ensure JavaFX is available on the module path or run from an IDE that configures it.
-- Uploads failing: check console logs, backend accessibility, and the `client.properties` URL.
+- Run the app from your IDE for iterative UI testing. Watch console output for request/response logs when exercising upload and auth flows.
+
+
+
+
+
 
 
 
